--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".WithWithoutAnimationActivity" />
-        <activity android:name=".SlideActivity"></activity>
+        <activity android:name=".SlideActivity" />
+        <activity android:name=".ExplodeActivity"></activity>
     </application>
 
 </manifest>
