--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".WithWithoutAnimationActivity" />
         <activity android:name=".SlideActivity" />
         <activity android:name=".ExplodeActivity" />
-        <activity android:name=".ChangeImageTransformActivity"></activity>
+        <activity android:name=".ChangeImageTransformActivity" />
+        <activity android:name=".PathCurvedMotionActivity"></activity>
     </application>
 
 </manifest>
