--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".TransitionNameActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +22,7 @@
         <activity android:name=".ExplodeActivity" />
         <activity android:name=".ChangeImageTransformActivity" />
         <activity android:name=".PathCurvedMotionActivity" />
-        <activity android:name=".ActivitySceneTransitionActivity"></activity>
+        <activity android:name=".ActivitySceneTransitionActivity" />
     </application>
 
 </manifest>
