--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CoordinatorLayoutActivity"></activity>
+        <activity
+            android:name=".FabActivity"
+            android:label="@string/title_activity_fab"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".CoordinatorLayoutActivity" />
         <activity android:name=".TransitionNameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
