Custom rotate behavior example

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".coordinator.CustomBehaviorActivity"
+        <activity
+            android:name=".coordinator.CustomRotateBehaviorActivity"
+            android:label="@string/title_activity_custom_roate_behavior"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".coordinator.CustomBehaviorActivity"
             android:label="@string/custom_behavior_activity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".coordinator.FabActivity"
             android:label="@string/title_activity_fab"
