--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".custom.CustomViewsActivity">
+        </activity>
         <activity android:name=".constraint.MultiFabActivity">
         </activity>
         <activity android:name=".animations.InterpolatorsActivity"/>
