Added extended FAB

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".material.ExtendedFabActivity"
+            android:theme="@style/AppTheme.Material"
+            />
+        <activity android:name=".material.MaterialActivity" />
         <activity android:name=".constraint.MotionLayoutActivity" />
         <activity android:name=".custom.PollViewActivity" />
         <activity android:name=".custom.CustomViewsActivity" />
