Added another basic motion layout example

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".constraint.motion.KeyFrameSetActivity"></activity>
+        <activity android:name=".constraint.motion.BasicMotionLayout2Activity"></activity>
+        <activity android:name=".constraint.motion.KeyFrameSetActivity" />
         <activity android:name=".constraint.motion.BasicMotionLayoutActivity" />
         <activity
             android:name=".material.ExtendedFabActivity"
