--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".constraint.motion.MotionYouTubeActivity"></activity>
+        <activity android:name=".constraint.motion.MotionKeyTriggerActivity"></activity>
+        <activity android:name=".constraint.motion.MotionYouTubeActivity" />
         <activity android:name=".constraint.motion.MotionFragmentActivity" />
         <activity android:name=".constraint.motion.MotionViewPagerActivity" />
         <activity android:name=".constraint.motion.MotionParallaxActivity" />
-        <activity android:name=".constraint.motion.CoordinatorLayoutWithMotionLayout2Activity" />
+        <activity android:name=".constraint.motion.MotionCoordinatorLayout2Activity" />
         <activity android:name=".constraint.motion.ImageSaturationActivity" />
-        <activity android:name=".constraint.motion.CoordinatorLayoutWithMotionLayoutActivity" />
+        <activity android:name=".constraint.motion.MotionCoordinatorLayoutActivity" />
         <activity android:name=".constraint.motion.BasicMotionLayout2Activity" />
         <activity android:name=".constraint.motion.KeyFrameSetActivity" />
         <activity android:name=".constraint.motion.BasicMotionLayoutActivity" />
