--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".constraint.motion.MotionKeyTriggerActivity"></activity>
+        <activity android:name=".constraint.motion.MotionMultiStateActivity"></activity>
+        <activity android:name=".constraint.motion.MotionKeyTriggerActivity" />
         <activity android:name=".constraint.motion.MotionYouTubeActivity" />
         <activity android:name=".constraint.motion.MotionFragmentActivity" />
         <activity android:name=".constraint.motion.MotionViewPagerActivity" />
